--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,7 @@ h1.topnav {
 	background-color: #DBDEDD;
 	height:530px;
 	background-position: center 10px;
+	box-shadow: inset 0px 0px 4px rgba(0,0,0,.3)
 
 }
 
@@ -131,7 +132,7 @@ h1.topnav {
 }
 
 .main-container-h2 {
-	margin: 0;
+	margin: 0 ;
 color: #132752;
 font-weight: 400;
 font-size: 46px;
@@ -141,14 +142,15 @@ line-height: 60px;
 }
 
 .main-container-h3 {
-	margin:0;
-	font-weight: 300;
 	color: rgba(255,255,255,.9);
-	padding-top: 40px;
-border-bottom: 1px solid rgba(255,255,255,.9);
-padding-bottom: 10px;
-font-size: 24px;
-width:100px;
+	border-bottom: 1px solid rgba(255,255,255,.9);
+
+	margin:0 auto;
+	font-weight: 300;
+	padding-top: 20px;
+	padding-bottom: 10px;
+	font-size: 36px;
+	width:108px;
 }
 
 .main-container-p {
@@ -173,6 +175,7 @@ width:100px;
 
 .third-container {
 	background:#ffffff;
+	box-shadow: inset 0px 0px 4px rgba(0,0,0,.3);
 }
 
 .third-container-3 {
@@ -182,14 +185,100 @@ width:100px;
 }
 
 .third-container-h3 {
-	margin:0;
-	font-weight: 300;
+	
 	color: #000000;
-	padding-top: 40px;
-border-bottom: 1px solid #000000;
-padding-bottom: 10px;
-font-size: 24px;
-width:129px;
+	border-bottom: 1px solid #000000;
+	margin:0 auto;
+	font-weight: 300;
+	padding-top: 20px;
+	padding-bottom: 10px;
+	font-size: 36px;
+	width:190px;
+}
+
+.three-link a {
+	color: #C6C6C6;
+	text-decoration:none;
+}
+
+.three-link a:hover {
+	color: #253E71;
+}
+
+.three-big {
+	font-size:22px;
+}
+
+.fourth-container-wrapper {
+	background:#DBDEDD;
+	box-shadow: inset 0px 0px 4px rgba(0,0,0,.3);
+}
+
+.fourth-container {
+	width:900px;
+	margin:0 auto;
+	padding: 0px 0px 30px;
+}
+
+.fourth-container-h3 {
+	
+	color: #253E71;
+	border-bottom: 1px solid #253E71;
+	margin:0 auto;
+	font-weight: 300;
+	padding-top: 20px;
+	padding-bottom: 10px;
+	font-size: 36px;
+	width:146px;
+}
+
+.sponsor {
+	float:left;
+	width:297px;
+	height:200px;
+	border-radius: 8px;
+	margin: 25px;
+	text-align:center;
+	color:#253E71;
+	border:1px solid rgba(0,0,0,.1);
+}
+
+.sponsor p {
+	padding-top:17px;
+}
+
+.sponsortwo p {
+	margin-bottom:10px;
+}
+
+.sponsor:hover {
+	box-shadow: inset 0px 0px 10px rgba(0,0,0,.1);
+	cursor: pointer;
+	background: #D6D6D6;
+}
+
+.sponsorcontainer {
+	width:700px;
+	margin: 20px auto 0px;
+}
+
+.webcare {
+	background: #D6D6D6;
+	width:615px;
+	margin: 0 auto;
+	padding: 18px 20px;
+	box-shadow: inset 0px 0px 10px rgba(0,0,0,.1);
+	border-radius:8px;
+}
+
+.webcare h4 {
+	margin: 0;
+	color:#253E71;
+}
+
+.webcare p {
+	margin: 10px 0px 0px 0px;
+	line-height:26px;
 }
 
 footer {
@@ -213,5 +302,9 @@ footer {
 	margin:0;
 	font-weight: 300;
 	float:left;
+}
+
+.clearfix {
+	clear:both;
 }
 
