--- a/css/style.css
+++ b/css/style.css
@@ -443,7 +443,7 @@ width:100%;
 .mobile-hamburger {
 	float:left;
 	margin:0;
-	padding:10px 20px;
+	padding:12px 24px 9px 20px;
 	background:#000000;
 }
 
