--- a/css/style.css
+++ b/css/style.css
@@ -656,6 +656,7 @@ input[type=email] {
 
 .mailing-list-copy-p {
 	color: #253E71;
+	font-family: "Source Sans Pro", sans-serif;
 font-weight: 400;
 }
 
