Add Meetup.com widget to nav

--- a/css/style.css
+++ b/css/style.css
@@ -908,3 +908,11 @@ nav {
 	}
 }
 
+/***********************************
+Meetup.com Widget Styles
+***********************************/
+
+div.meetup-widget {
+	margin: 0 auto;
+	margin-top: 15px;
+}
